# consulta_portalTransportador

./: .env  .gitignore  README.md  bot.py  db.py  main.py  pyproject.toml  requirements.txt  settings.ini  test.py
OLD/: bot.py  main.py
tools/: database.py  log_setup.py  secrets.py
